# a3_pdf_markdown

./: .gitignore  A3 PDF Markdown.cmd  A3 PDF Markdown.vbs  ARCHITECTURE.md  MEMORY.md  README.md  plan.md  pyproject.toml
.claude/: settings.local.json
a3_pdf_markdown/: __init__.py
a3_pdf_markdown/app/: main.py  resources.py
a3_pdf_markdown/app/converters/: __init__.py  base.py  markitdown_converter.py  ocr_engine.py  pdf_pipeline.py  pptx_enrichment.py  vision_client.py
a3_pdf_markdown/app/core/: config.py  job_runner.py  models.py  paths.py
a3_pdf_markdown/app/ui/: main_window.py
scripts/: in в Markdow3_LLM.ipynb  microsoft2_markitdown_converter.ipynb
